# economy-core

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api.rs  logic.rs  main.rs  models.rs
src/logic/: environment.rs  mod.rs  pricing.rs
static/: index.html
