[package]
name = "economy-core"
version = "2.0.0"
edition = "2024"

[dependencies]
# Web & Server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full", "signal"] }
tower-http = { version = "0.6", features = ["fs", "cors", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Math & Logic
rand = "0.9"
rand_distr = "0.5"
rustc-hash = "2.1.0"
parking_lot = "0.12"

# Utilities
thiserror = "1.0"
validator = { version = "0.19", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# =================================================================
# 关键修复区 (根据 reqwest 0.13.1 文档)
# =================================================================
# 1. default-features = false: 尽管 0.13 默认就是 rustls，但为了稳健，我们显式控制。
# 2. features = ["rustls"]: 启用核心 Rustls 支持 (文档中确认存在的 flag)。
# 3. features = ["json"]: 开启 JSON 支持。
# 4. features = ["gzip", "brotli", "deflate"]: 开启压缩支持 (根据文档，分别对应 tower-http 实现)。
# 5. features = ["http2"]: 显式开启 HTTP2 (文档显示它在默认列表里，手动开启更保险)。
reqwest = { version = "0.13", default-features = false, features = [
    "rustls", 
    "rustls-native-certs", # 显式添加这个以确保在 Windows/Linux 上能读到系统证书
    "json", 
    "http2", 
    "gzip", 
    "brotli", 
    "deflate"
] }

# 底层加密库
aws-lc-rs = { version = "1.11", features = ["bindgen", "rustls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
