[package]
name = "economy-core"
version = "2.0.0"
edition = "2024"

[dependencies]
# Web & Server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full", "signal"] }
tower-http = { version = "0.6", features = ["fs", "cors", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

# Math & Logic
rand = "0.9"
rand_distr = "0.5"
rustc-hash = "2.1.0"
parking_lot = "0.12"

# Utilities
thiserror = "1.0"
validator = { version = "0.19", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# =================================================================
# Networking & Security (最终修复版)
# =================================================================

# Reqwest 0.13 配置:
# 1. 显式开启 "rustls" 和 "rustls-native-certs" 以支持 HTTPS
# 2. 显式开启 "json", "http2" 等基础功能
reqwest = { version = "0.13", default-features = false, features = [
    "rustls", 
    "rustls-native-certs", 
    "json", 
    "http2", 
    "gzip", 
    "brotli", 
    "deflate"
] }

# AWS-LC-RS 配置:
# 1. 仅保留 "bindgen" 以解决 GitHub Actions 环境编译问题
# 2. 移除了不存在的 "rustls" feature
aws-lc-rs = { version = "1.11", features = ["bindgen"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
