[package]
name = "economy-core"
version = "2.0.0"
edition = "2024"

[dependencies]
# Web & Server
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full", "signal"] }
tower-http = { version = "0.6", features = ["fs", "cors", "timeout"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# [关键修改] 移除 bincode，换用 postcard (开启标准库支持)
postcard = { version = "1.0", features = ["use-std"] }
chrono = { version = "0.4", features = ["serde"] }

# Math & Logic
rand = "0.9"
rand_distr = "0.5"
rustc-hash = "2.1.0"
parking_lot = "0.12"

# Utilities
thiserror = "2.0"
validator = { version = "0.20", features = ["derive"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Networking & Security (保持之前的修复)
reqwest = { version = "0.13", default-features = false, features = [
    "rustls", 
    "rustls-native-certs", 
    "json", 
    "http2", 
    "gzip", 
    "brotli", 
    "deflate"
] }

# 底层依赖
aws-lc-rs = { version = "1.11", features = ["bindgen"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'